--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 			<artifactId>testng</artifactId>
 			<version>${testng.version}</version>
 		</dependency>
-
+		<!-- Appium Dependencies -->
 		<dependency>
 			<groupId>io.appium</groupId>
 			<artifactId>java-client</artifactId>
